# LockPilot-Windows

./: .gitignore  README.md
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: app.js  index.html  styles.css
